--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,17 +27,17 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = "11"
+        jvmTarget = "17"
     }
     buildFeatures {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion "1.3.2"
+        kotlinCompilerExtensionVersion "1.4.3"
     }
     packagingOptions {
         resources {
@@ -47,7 +47,6 @@ android {
 }
 
 dependencies {
-
     implementation "androidx.core:core-ktx:1.10.1"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
     implementation "androidx.activity:activity-compose:1.7.1"
@@ -59,4 +58,5 @@ dependencies {
 
     implementation project(":core")
     implementation project(":okhttp")
+    implementation project(":source-android")
 }
