--- a/core/build.gradle
+++ b/core/build.gradle
@@ -5,8 +5,12 @@ plugins {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_11
-    targetCompatibility = JavaVersion.VERSION_11
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
+}
+
+dependencies {
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.1")
 }
 
 afterEvaluate {
@@ -15,7 +19,7 @@ afterEvaluate {
             maven(MavenPublication) {
                 groupId = "com.oxy.otto"
                 artifactId = "core"
-                version = "0.1.0-alpha01"
+                version = rootProject.ext.version
 
                 from components.java
             }
