--- a/core/build.gradle
+++ b/core/build.gradle
@@ -11,6 +11,7 @@ java {
 
 dependencies {
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.1")
+    implementation("com.squareup.okio:okio:3.3.0")
 }
 
 afterEvaluate {
